--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,10 @@ header {
     max-width: 1140px;
     width: 100%;
     margin: 0 auto;
+    padding: 0 15px;
+}
+.mobil-menu{
+    display: none;
 }
 
 .flex{
@@ -139,6 +143,10 @@ li.active a {
     top: 0;
     left: 0;
     z-index: 2;
+}
+
+.detail-overlay-2{
+    display: none;
 }
 .welcome-overlay:before {
     content: "";
@@ -1086,7 +1094,7 @@ input::placeholder{
 
 .contact textarea {
     width: 100%;
-    height: 132px;
+    height: 187px;
     background: #fff;
     border: none;
     padding-top: 8px;
@@ -1116,4 +1124,5 @@ footer {
 footer .copyright p {
     text-align: center;
     color: #ddd;
+    margin: 0;
 }
