--- a/css/responsive.css
+++ b/css/responsive.css
@@ -16,23 +16,23 @@
     	transition: all 0.5s ease 0s;
 	}
 	.toggle-menu {
-	    background-color: #fff;
+	    background-color: #000;
 	    line-height: 1;
 	    position: fixed;
-	    top: 0;
-	    bottom: 0;
-	    width: 300px;
-	    left: -302px;
+	    top: -500px;
+	    width: 100%;
+	    left: -400px;
 	    transition: all 0.5s ease 0s;
 	    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 	}
-	.toggle-menu li a{
-		color: #000;
+	.toggle-menu li a {
+    	color: #fff;
 	}
 	.toggle{
 		display: none;
 	}
 	input#toggle:checked + .ib + .toggle-menu  {
+		top: 0;
 		left: 0;
 	}
 	.menu-block{
@@ -51,7 +51,7 @@
 	    margin: 0 auto;
 	    bottom: -4px;
 	    height: 1px;
-	    background-color: #000;
+	    background-color: #fff;
 	    position: absolute;
 	    opacity: 0;
 	    width: 0;
@@ -60,6 +60,7 @@
 	.welcome-text .social-icon a {
 		font-size: 13px;
 	}
+	
 	.mobil-menu ul li:hover a:before{
 		opacity: 1;
 		width: 100%;
@@ -245,9 +246,14 @@
 	footer .copyright p {
     	margin: 0;
 	}
-	.ib{
-		z-index: 2;
+	.ib {
+    	position: relative;
+    	z-index: 2;
 	}
+	.blog-img {
+    	display: flex;
+    	align-items: center;
+		}
 }
 
 @media (max-width:320px){
